--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #1a1a1b;
   color: white;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 code {
